--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <meta name="theme-color" content="#0b2f4e">
   <title>Karan Veer Singh | Links</title>
   <style>
-    html { background-color: #0b2f4e; }
-
     * {
       margin: 0;
       padding: 0;
@@ -19,8 +16,8 @@
       background: linear-gradient(180deg, #0b2f4e 0%, #0f456b 35%, #1a6fa1 100%);
       color: white;
       text-align: center;
-      padding: calc(20px + env(safe-area-inset-top)) 20px 0;
-      min-height: 100dvh;
+      padding: 0;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -134,7 +131,7 @@
         font-size: 0.7rem;
         max-width: 96vw;
         border-radius: 12px 12px 0 0;
-        padding: 16px 0 calc(8px + env(safe-area-inset-bottom));
+        padding: 16px 0 8px;
       }
       body::before { filter: blur(40px) saturate(110%); }
     }
@@ -179,4 +176,3 @@
   </footer>
 </body>
 </html>
-
