--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </a>
     <a class="link-btn" href="https://www.linkedin.com/in/karanveersingh05">
       <img src="lr.png" alt="linkedin">
-      Lets Connet Professionally 
+      Lets Connect Professionally 
     </a>
     <a class="link-btn" href="https://music.apple.com/profile/karan_singh05">
       <img src="am.png" alt="applemusic">
