--- a/index.html
+++ b/index.html
@@ -165,10 +165,15 @@
       <img src="am.png" alt="applemusic">
       Music I Vibe To
     </a>
+       <a class="link-btn" href="https://www.duolingo.com/profile/VeerSingh05">
+      <img src="duor.png" alt="duo">
+      Duolingo and the streaks🔥
+    </a>
     <a class="link-btn" href="https://www.youtube.com/@karan_singh05">
       <img src="ytr.png" alt="youtube">
       Inactive but Might Do
     </a>
+  
   </div>
 
   <footer>
@@ -176,3 +181,4 @@
   </footer>
 </body>
 </html>
+
