--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </a>
        <a class="link-btn" href="https://www.duolingo.com/profile/VeerSingh05">
       <img src="duor.png" alt="duo">
-      Duolingo and the streaks🔥
+      Duolingo Streaks
     </a>
     <a class="link-btn" href="https://www.youtube.com/@karan_singh05">
       <img src="ytr.png" alt="youtube">
@@ -181,4 +181,5 @@
   </footer>
 </body>
 </html>
+
 
