--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
 
   <div class="links">
-    <a class="link-btn" href="https://www.notion.so/Le-Journalisme-Automobile-26ea89d67df1801f86c3dbd684a59faa">
+    <a class="link-btn" href="https://longhaired-goal-c4e.notion.site/Le-Journalisme-Automobile-26ea89d67df1801f86c3dbd684a59faa?source=copy_link">
       <img src="wheel.png" alt="Blog">
       Automobile Blogs for Fun
     </a>
@@ -181,6 +181,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
