Fix email link in index.html
Updated email link from karanoman@gmail.com to karanoman@zohomail.in.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <div class="socials">
     <a href="https://www.linkedin.com/in/karanveersingh05/" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
-    <a href="mailto:karanoman@gmail.com"><img src="email.png" alt="Email"></a>
+    <a href="mailto:karanoman@zohomail.in"><img src="email.png" alt="Email"></a>
     <a href="https://github.com/karanveersingh05" target="_blank"><img src="github.png" alt="GitHub"></a>
   </div>
 
@@ -181,6 +181,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
