--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
   <div class="links">
     <a class="link-btn" href="https://karanveersingh.notion.site/Le-Journalisme-Automobile-26ea89d67df1801f86c3dbd684a59faa">
       <img src="wheel.png" alt="Blog">
-      Automobile Blogs for Fun
+      Automobile Blogs | For Fun
     </a>
-    <a class="link-btn" href="https://github.com/karanveersingh05">
-      <img src="ghr.png" alt="GitHub">
-      GitHub for Work
+       <a class="link-btn" href="https://www.youtube.com/@karan_singh05">
+      <img src="ytr.png" alt="youtube">
+    Youtube | Casual
     </a>
     <a class="link-btn" href="https://www.linkedin.com/in/karanveersingh05">
       <img src="lr.png" alt="linkedin">
@@ -169,11 +169,10 @@
       <img src="duor.png" alt="duo">
       Duolingo Streaks
     </a>
-    <a class="link-btn" href="https://www.youtube.com/@karan_singh05">
-      <img src="ytr.png" alt="youtube">
-      Inactive but Might Do
+    <a class="link-btn" href="https://github.com/karanveersingh05">
+      <img src="ghr.png" alt="GitHub">
+      GitHub | Nothing Fancy
     </a>
-  
   </div>
 
   <footer>
@@ -181,6 +180,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
